--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="country"
+            type="com.example.countriesmvvm.model.Country" />
+        <variable
+            name="listener"
+            type="com.example.countriesmvvm.adapter.CountryClickListener" />
+
+    </data>
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:onClick="@{listener::onCountryCliked}">
+
+    <TextView
+        android:id="@+id/countryUuidTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="@{String.valueOf(country.uuid)}">
+
+    </TextView>
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:downloadUrl="@{country.countryFlagUrl}">
     </ImageView>
 
     <LinearLayout
@@ -25,7 +45,7 @@
             android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:text="@{country.countryName}"
             android:padding="5dp"
             android:textSize="20sp"
             android:textStyle="bold">
@@ -35,7 +55,7 @@
             android:id="@+id/regionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Region"
+            android:text="@{country.countryRegion}"
             android:padding="5dp"
             android:textSize="16sp">
         </TextView>
